--- a/SBSCLearn/appsettings.json
+++ b/SBSCLearn/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-K2UOTB5\\SQLEXPRESS;Initial Catalog=SBSC-LEARNDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
